# cloudwatch-mcp

./: .env  .gitignore  README.md  aws_cloudwatch.py  client_logs.json  cloudwatch_server.py  examples.sh  pyproject.toml  requirements.txt  server.py  server_logs.json  test_cloudwatch.py
.cursor/rules/: mcp-llm-full.mdc
