[project]
name = "cloudwatch-mcp"
version = "0.1.0"
description = "MCP server for AWS CloudWatch integration, providing access to log groups, alarms, and monitoring tools"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.4.1",
    "boto3>=1.34.0",
]
